syntax = "proto3";

option go_package = "github.com/spiridonov/yellowstone/monstera/x;monsterax";

package pro.spiridonov.monstera.monsterax;

message Error {
  ErrorCode code = 1;
  string message = 2;
  repeated ErrorContext context = 3;
}

message ErrorContext {
  string key = 1;
  string value = 2;
}

enum ErrorCode {
  INVALID = 0;
  OK = 1;
  INVALID_ARGUMENT = 2;
  DEADLINE_EXCEEDED = 3;
  NOT_FOUND = 4;
  ALREADY_EXISTS = 5;
  RESOURCE_EXHAUSTED = 6;
  UNIMPLEMENTED = 7;
  INTERNAL = 8;
}
